--- a/index.html
+++ b/index.html
@@ -7,20 +7,52 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
+<!-- start body -->
   <body>
-    <div class="header"></div>
-    <div class="main">
-      <div class="sidebar"></div>
-      <div class="content">
-        <div>
-          <div>lol</div>
-          <div>lol</div>
-          <div>lol</div>
-        </div>
-        <div></div>
-        <div></div>
+    <!-- start header -->
+    <div class="header">
+      <div class="header-left">
+        <img src="github-icon.png" alt="github icon">
+        <h1>Git Basics</h1>
+      </div>
+      <div class="header-right">
+        <ul>
+          <li><a href="#">What is git?</a></li>
+          <li><a href="#">What is Github?</a></li>
+          <li><a href="#">How do you use git and Github?</a></li>
+          <li><a href="#">More resources</a></li>
+        </ul>
       </div>
     </div>
-    <div class="footer"></div>
+    <!-- end header -->
+    <!-- start main -->
+    <div class="main">
+      <!-- start sidebar -->
+      <div class="sidebar"></div>
+      <!-- end sidebar -->
+      <!-- start content -->
+      <div class="content">
+        <div class="row">
+          <div class="first-row left">lol</div>
+          <div class="first-row">lol</div>
+          <div class="first-row right">lol</div>
+        </div>
+        <div class="row">
+          <div class="second-row left">lol</div>
+          <div class="second-row right">lol</div>
+        </div>
+        <div class="row">
+          <div class="third-row">lol</div>
+        </div>
+      </div>
+      <!-- end content -->
+    </div>
+    <!-- end main -->
+    <!-- start footer -->
+    <div class="footer">
+      <p>You can learn more about Git and Github here: <a href="#">Github Guides</a></p>
+    </div>
+    <!-- end footer -->
   </body>
+  <!-- end body -->
 </html>
