--- a/index.html
+++ b/index.html
@@ -28,21 +28,44 @@
     <!-- start main -->
     <div class="main">
       <!-- start sidebar -->
-      <div class="sidebar"></div>
+      <div class="sidebar">
+        <h1>What is Git?</h1>
+        <p>Git is a version control system; you can think of it as a series of snapshots (commits) of your code base. With the creation of each snapshot you build out a whole application, seeing the growth of a full app. During this time you can make branches to experiment and come back to a previous snapshots you took or merge those experiments into the your app.</p>
+        <h1>What is GitHub?</h1>
+        <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere using those code snapshots that you took during develpment.</p>
+      </div>
       <!-- end sidebar -->
       <!-- start content -->
       <div class="content">
         <div class="row">
-          <div class="first-row left">lol</div>
-          <div class="first-row">lol</div>
-          <div class="first-row right">lol</div>
+          <div class="first-row left">
+            <h1>Git init</h1>
+            <p><span class="blue-text">Git init</span> is the act of registering this current code base.</p>
+          </div>
+          <div class="first-row">
+            <h1>Git add</h1>
+            <p><span class="blue-text">Git add</span> is how we stage the intergration of our current code base into our current list of snapshots</p>
+          </div>
+          <div class="first-row right">
+            <h1>Git status</h1>
+            <p><span class="blue-text">Git status</span> allows us to see the changes we are going to make</p>
+          </div>
         </div>
         <div class="row">
-          <div class="second-row left">lol</div>
-          <div class="second-row right">lol</div>
+          <div class="second-row left">
+            <h1>Git commit</h1>
+            <p><span class="blue-text">Git commit</span>; finally we can commit those changes we added to our last snapshot giving us a new snapshot of our code with whatever new changes were made</p>
+          </div>
+          <div class="second-row right">
+            <h1>Git remote add</h1>
+            <p><span class="blue-text">Git remote add</span> is used to set up an online repository where we can place all of our current code. This isf where the outside world can see our code base</p>
+          </div>
         </div>
         <div class="row">
-          <div class="third-row">lol</div>
+          <div class="third-row">
+            <h1>Git push</h1>
+            <p><span class="blue-text">Git push</span> is how we get our code to Github, and excellent place to store all of our repositories. Other developers might look at our existing projects to see how we approached problems, pull down our code and add new features or even update our code base with features they wanted to add</p>
+          </div>
         </div>
       </div>
       <!-- end content -->
